# parallel_puzlle

./: CMakeLists.txt  FileReader.cpp  FileReader.h  GraphBuilder.cpp  GraphBuilder.h  PuzzleApplication.cpp  PuzzleApplication.h  PuzzleSolver.cpp  PuzzleSolver.h  README.md  main.cpp  parallel_puzzle
